<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="@dimen/tab_height"
    android:id="@+id/tabHolder"
    android:background="@drawable/tab_border_top">
    <TextView
        android:id="@+id/tab_news"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:drawableTop="@mipmap/tab_icon_news_hover"
        android:textSize="@dimen/font_tab"
        android:text="@string/tab_news"
        android:textColor="@color/color_font_tab_hover"
        android:drawablePadding="@dimen/tab_drawable_padding"/>
    <TextView
        android:id="@+id/tab_lesson"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:drawableTop="@mipmap/tab_icon_lesson"
        android:textSize="@dimen/font_tab"
        android:text="@string/tab_lesson"
        android:textColor="@color/color_font_tab"
        android:drawablePadding="@dimen/tab_drawable_padding"/>
    <TextView
        android:id="@+id/tab_device"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:drawableTop="@mipmap/tab_icon_device"
        android:textSize="@dimen/font_tab"
        android:text="@string/tab_device"
        android:textColor="@color/color_font_tab"
        android:drawablePadding="@dimen/tab_drawable_padding"/>
    <TextView
        android:id="@+id/tab_reserve"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:drawableTop="@mipmap/tab_icon_reserving"
        android:textSize="@dimen/font_tab"
        android:text="@string/tab_reserve"
        android:textColor="@color/color_font_tab"
        android:drawablePadding="@dimen/tab_drawable_padding"/>
    <TextView
        android:id="@+id/tab_person"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:drawableTop="@mipmap/tab_icon_person"
        android:textSize="@dimen/font_tab"
        android:text="@string/tab_person"
        android:textColor="@color/color_font_tab"
        android:drawablePadding="@dimen/tab_drawable_padding"/>
</LinearLayout>