<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="@dimen/tab_secondly_height"
    android:background="@drawable/tab_border_bottom">
    <TextView
        android:id="@+id/tab_device_total"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="@dimen/font_tab_secondly"
        android:text="@string/tab_device_total"
        android:textColor="@color/color_font_tab_secondly" />
    <TextView
        android:id="@+id/tab_device_usual"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="@dimen/font_tab_secondly"
        android:text="@string/tab_device_usual"
        android:textColor="@color/color_font_tab_secondly" />
    <TextView
        android:id="@+id/tab_device_star"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="@dimen/font_tab_secondly"
        android:text="@string/tab_device_star"
        android:textColor="@color/color_font_tab_secondly" />
</LinearLayout>