<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/tab_device_total_padding"
    android:background="@drawable/tab_border_bottom">
    <TextView
        android:id="@+id/tab_device_department"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:drawableTop="@mipmap/icon_device_catogary_department_hover"
        android:textSize="@dimen/font_tab"
        android:text="@string/tab_device_total_department"
        android:textColor="@color/color_font_tab_hover"
        android:drawablePadding="@dimen/tab_drawable_padding"/>
    <TextView
        android:id="@+id/tab_device_function"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:drawableTop="@mipmap/icon_device_catogary_function"
        android:textSize="@dimen/font_tab"
        android:text="@string/tab_device_total_function"
        android:textColor="@color/color_font_tab"
        android:drawablePadding="@dimen/tab_drawable_padding"/>
    <TextView
        android:id="@+id/tab_device_position"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:drawableTop="@mipmap/icon_device_catogary_position"
        android:textSize="@dimen/font_tab"
        android:text="@string/tab_device_total_position"
        android:textColor="@color/color_font_tab"
        android:drawablePadding="@dimen/tab_drawable_padding"/>
</LinearLayout>